# logzod

./: Cargo.toml  Dockerfile  build.sh  test.py
.github/workflows/: release.yml
src/: main.rs
