[package]
name = "logzod"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirmod-rs = { path = "../mirmod-rs" }
tokio = { version = "1.32.0", features = ["full"] }
serde = "1.0.107"
serde_json = "1.0.107"
chrono = "0.4.31"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-native-tls"] }
sysinfo = "0.29.10"
amqprs = { version = "1.4", features = ["tls"] }
async-trait = "0.1"
futures-util = "0.3"
rand = "0.8"
url = "2.5.0"
percent-encoding = "2.3.1"
serde_yaml = "0.9.34"
